# MutsuRelay

./: .gitignore  AGENTS.md  README.md  pubspec.yaml
.github/workflows/: build.yml
asr/: blocklist.txt
cmake/: download_model.cmake  native_bundle.cmake
lib/: app.dart  main.dart
lib/ffi/: native_bridge.dart
lib/models/: qr_code_status.dart  sentence_item.dart  user_info.dart
lib/providers/: app_state.dart
lib/screens/: main_screen.dart  mini_screen.dart
lib/theme/: app_theme.dart
lib/widgets/: message_list.dart  mic_button.dart  mini_toolbar.dart  mode_toggle.dart  qr_login_modal.dart  settings_modal.dart  toast_overlay.dart  top_bar.dart  vad_slider.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/packaging/appimage/: make_config.yaml
linux/runner/: my_application.cc
native/: Cargo.toml  build.ps1  build.sh  download-model.ps1
native/.cargo/: config.toml
native/src/: bilive.rs  censor.rs  lib.rs  vad.rs
test/: widget_test.dart
tool/: build_and_run.dart  package.dart
windows/: CMakeLists.txt
windows/installer/: setup.iss
windows/runner/: Runner.rc  main.cpp
